basic header created

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -8,14 +8,14 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: rgb(65, 3, 235);
+  height: 30%;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.5em;
 }
 
 .App-intro {
