--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 .App-logo {
   animation: App-logo-spin infinite 3s linear;
   height: 120px;
+  background-color: rgb(233, 77, 77);
+  padding: 10px; 
 }
 
 .App-header {
@@ -16,6 +18,18 @@
 
 .App-title {
   font-size: 2.0em;
+  padding-top: 25px;
+}
+
+.App-subtitle {
+  font-size: 1.5em;
+  font-style: italic;
+}
+
+.App-score {
+  font-size: 2.0em;
+  text-align: right;
+  padding-right: 40px;
 }
 
 .App-intro {
@@ -25,4 +39,57 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  height: 325px;
+  margin: 1rem;
+  position: relative;
+  width: 325px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  text-align: left;
+}
+
+.card > .img-container {
+  height: 60%;
+  overflow: hidden;
+  text-align: center;
+  background:#6CADDC;
+}
+.card > .img-container > img {
+  width: 60%
+}
+
+.card > .content {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 15px;
+}
+
+.card > .content > ul {
+  list-style-type: none;
+}
+
+.card > .content > ul > li {
+  margin-top: 18px;
+}
+
+.card > .remove {
+  color: #ff1744;
+  font-size: 48px;
+  position: absolute;
+  top: -20px;
+  right: 5px;
+  cursor: pointer;
+}
+
+.card > .remove:hover {
+  color: #d50000;
+}
+
+.wrapper {
+  
 }
