--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.App-footer {
+  background-color: rgb(79, 78, 82);
+  height: 30%;
+  padding: 20px;
+  color: white;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 3s linear;
   height: 120px;
@@ -43,14 +50,15 @@
 
 
 .card {
-  background: #fff;
-  border-radius: 2px;
-  height: 325px;
+  background: rgb(189, 10, 10);
+  border-radius: 1px;
+  height: 256px;
   margin: 1rem;
   position: relative;
-  width: 325px;
+  width: 256px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: left;
+  /* text-align: left; */
+  display: block;
 }
 
 .card > .img-container {
@@ -60,7 +68,7 @@
   background:rgb(3, 52, 87);
 }
 .card > .img-container > img {
-  width: 100%
+  width: 100%;
 }
 
 .card > .content {
