--- a/src/App.css
+++ b/src/App.css
@@ -17,26 +17,32 @@
 }
 
 .App-header {
-  background-color: rgb(65, 3, 235);
+  background-color: rgb(160, 133, 75);
+  background-image: url("/images/toilet.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
   height: 30%;
   padding: 20px;
   color: white;
 }
 
 .App-title {
-  font-size: 2.0em;
+  font-size: 2.25em;
   padding-top: 25px;
+  color: black
 }
 
 .App-subtitle {
   font-size: 1.5em;
   font-style: italic;
+  color: gray
 }
 
 .App-score {
   font-size: 2.0em;
   text-align: right;
   padding-right: 40px;
+  color: black
 }
 
 .App-intro {
