--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -6,3 +6,114 @@
   color: #2A77AE;
   margin-bottom: 50px;
 }
+
+.App {
+  text-align: center;
+}
+
+.App-footer {
+  background-color: rgb(79, 78, 82);
+  height: 30%;
+  padding: 20px;
+  color: white;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 3s linear;
+  height: 120px;
+  background-color: rgb(233, 77, 77);
+  padding: 10px; 
+}
+
+.App-header {
+  background-color: rgb(160, 133, 75);
+  background-image: url("/images/toilet.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 30%;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 2.25em;
+  padding-top: 25px;
+  color: black
+}
+
+.App-subtitle {
+  font-size: 1.5em;
+  font-style: italic;
+  color: gray
+}
+
+.App-score {
+  font-size: 2.0em;
+  text-align: right;
+  padding-right: 40px;
+  color: black
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+
+.card {
+  background: rgb(189, 10, 10);
+  border-radius: 1px;
+  height: 256px;
+  margin: 1rem;
+  position: relative;
+  width: 256px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  /* text-align: left; */
+  display: inline-block;
+}
+
+.card > .img-container {
+  height: 100%;
+  /* overflow: hidden; we dont need text so commenting out to hide card text */
+  text-align: center;
+  background:rgb(3, 52, 87);
+}
+.card > .img-container > img {
+  width: 100%;
+}
+
+.card > .content {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 15px;
+}
+
+.card > .content > ul {
+  list-style-type: none;
+}
+
+.card > .content > ul > li {
+  margin-top: 18px;
+}
+
+.card > .remove {
+  color: #ff1744;
+  font-size: 48px;
+  position: absolute;
+  top: -20px;
+  right: 5px;
+  cursor: pointer;
+}
+
+.card > .remove:hover {
+  color: #d50000;
+ 
+}
+
+.wrapper {
+  
+}
