--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 .App-header {
-  background-color: rgb(160, 133, 75);
+  /* background-color: rgb(95, 67, 5); */
   background-image: url("/images/toilet.jpg");
   background-repeat: no-repeat;
   background-position: center;
