--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -7,6 +7,7 @@
   width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+  
 }
 
 .card > .img-container {
@@ -14,9 +15,16 @@
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
+ 
 }
 .card > .img-container > img {
-  width: 60%
+  width: 60%;
+  -webkit-transition: width 2s; /* Safari */
+  transition: width .35s;
+}
+
+.card > .img-container > img:hover {
+  width: 300px;
 }
 
 .card > .content {
