--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -2,7 +2,7 @@
   padding-top: 50px;
   background: rgb(50, 147, 211);
   height: 100%;
-  display: flex;
+  /* display: flex; */
   flex-flow: row wrap;
   padding: 20px;
   justify-content: space-around;
